--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -59,7 +59,7 @@
                         <span class="btn-text-inner">Case 案例</span>
                     </span>
                 </a>
-                <a href="/cases.html" class="btn-click magnetic p-button top_nav-link " data-strength="20"
+                <a href="/service" class="btn-click magnetic p-button top_nav-link " data-strength="20"
                     data-strength-text="10" style="transform: rotate(0.001deg);">
                     <span class="btn-text">
                         <span class="btn-text-inner">Service 服务</span>
