--- a/views/css/case-detail.css
+++ b/views/css/case-detail.css
@@ -3,24 +3,24 @@
 }
 
 .section1 h1 {
-    font-size: 72px;
-    margin-bottom: 30px;
+    font-size: 72rem;
+    margin-bottom: 30rem;
 }
 
 .section1 .tag {
     font-size: 0;
-    margin-bottom: 40px;
+    margin-bottom: 40rem;
 }
 
 .section1 .sub-title {
-    font-size: 32px;
-    margin-bottom: 40px;
+    font-size: 32rem;
+    margin-bottom: 40rem;
 }
 
 .section1 p {
     display: inline-block;
-    max-width: 1190px;
-    font-size: 18px;
+    max-width: 1190rem;
+    font-size: 18rem;
     color: #000;
 
 }
@@ -30,17 +30,17 @@
     vertical-align: middle;
     color: #fff;
     background-color: #F04444;
-    padding: 10px 24px;
-    margin: 0 10px;
-    font-size: 14px;
+    padding: 10rem 24rem;
+    margin: 0 10rem;
+    font-size: 14rem;
 }
 
 .btn-click.project-info {
-    border: 1px solid #000;
+    border: 1rem solid #000;
     color: #000;
-    width: 260px;
-    height: 60px;
-    margin: 80px auto 75px;
+    width: 260rem;
+    height: 60rem;
+    margin: 80rem auto 75rem;
 
 }
 
@@ -49,6 +49,6 @@
 }
 
 .btn-click.project-info .btn-text {
-    font-size: 18px;
+    font-size: 18rem;
     color: #000;
 }
