--- a/views/css/cases.css
+++ b/views/css/cases.css
@@ -14,7 +14,7 @@
     font-size: 0.83vw;
     color: #333;
     opacity: 0.7;
-    margin-top: 30px;
+    margin-top: 30rem;
 }
 
 .banner-left {
@@ -39,14 +39,14 @@
 .section1 .chose .item {
     width: 25%;
     position: relative;
-    margin: 0 15px;
+    margin: 0 15rem;
     cursor: pointer;
     z-index: 100
 }
 
 .section1 .chose .item .d1 {
-    padding: 1.2vw 25px;
-    border: 1px solid #000;
+    padding: 1.2vw 25rem;
+    border: 1rem solid #000;
     width: 100%;
     display: flex;
     align-items: center;
@@ -79,7 +79,7 @@
 }
 
 .section1 .chose .item .d2 p {
-    padding: 15px;
+    padding: 15rem;
     background-color: #000;
     color: white;
     transition: all 600ms
@@ -92,7 +92,7 @@
 
 .section2 {
     position: relative;
-    margin-top: 60px;
+    margin-top: 60rem;
 }
 
 .case-item {
@@ -113,12 +113,12 @@
 .section2 .cases a {
     width: 49%;
     margin-bottom: 5.2vw;
-    perspective: 25px;
+    perspective: 25rem;
 }
 
 /* .section2 .cases a .pic:hover {
     will-change: transform;
-    transform: translate (0px, 0рх, 0рх) scale3d(1, 1, 1) rotateX(-4.0658deg) rotateY(4.955deg) rotateZ(0deg) skew(0deg, 0deg);
+    transform: translate (0rem, 0рх, 0рх) scale3d(1, 1, 1) rotateX(-4.0658deg) rotateY(4.955deg) rotateZ(0deg) skew(0deg, 0deg);
     transform-style: preserve-3d;
     background-color: rgb (23, 23, 23);
 } */
@@ -138,21 +138,21 @@
 }
 
 .section2 .cases a .text {
-    margin: 30px 0 0;
+    margin: 30rem 0 0;
 }
 
 .section2 .cases a .text .p1 {
     color: #000;
     font-size: 1.97vw;
     font-weight: 700;
-    margin: 30px 0 20px;
+    margin: 30rem 0 20rem;
 }
 
 .section2 .cases a .text .des {
     color: #000;
     font-size: .9vw;
     font-weight: 400;
-    margin: 20px 0;
+    margin: 20rem 0;
     line-height: 1.6;
     word-break: break-all;
     text-overflow: ellipsis;
@@ -168,17 +168,17 @@
 
 .section2 .cases a .text .tag p {
     display: inline-block;
-    padding: 4px 34px;
+    padding: 4rem 34rem;
     background: #000;
     color: #fff;
-    margin: 0 10px 0 0;
-    line-height: 20px;
+    margin: 0 10rem 0 0;
+    line-height: 20rem;
     font-weight: 400;
 }
 
 .section2 .more a {
     width: 20vw;
-    border: 1px solid #000;
+    border: 1rem solid #000;
     background: transparent;
     display: block;
     text-align: center;
@@ -209,9 +209,9 @@
     font-weight: 300;
     transition: all 600ms;
     display: block;
-    width: 40px;
+    width: 40rem;
     text-align: center;
-    line-height: 40px
+    line-height: 40rem
 }
 
 .section2 .pagination a:hover {
