--- a/views/css/index.css
+++ b/views/css/index.css
@@ -1,5 +1,5 @@
 .banner {
-    min-height: 800px;
+    min-height: 800rem;
     background: #000;
     width: 100%;
     color: #fff;
@@ -11,60 +11,60 @@
 
 .banner-text {
     font-weight: 400;
-    font-size: 12px;
-    line-height: 16.8px;
-    width: 522px;
+    font-size: 12rem;
+    line-height: 16.8rem;
+    width: 522rem;
 }
 
 .banner-text .text-en {
-    font-size: 22px;
+    font-size: 22rem;
     font-weight: 200;
-    line-height: 30.8px;
-    margin: 30px 0 20px;
+    line-height: 30.8rem;
+    margin: 30rem 0 20rem;
 }
 
 .banner-text h1 {
-    font-size: 58px;
+    font-size: 58rem;
     font-weight: 700;
-    line-height: 80px;
+    line-height: 80rem;
 }
 
 .btn-click.project-consult {
-    width: 400px;
-    height: 80px;
-    margin-top: 30px;
-    border: 1px solid #fff;
+    width: 400rem;
+    height: 80rem;
+    margin-top: 30rem;
+    border: 1rem solid #fff;
 }
 
 .btn-click.project-consult .btn-text {
-    font-size: 24px;
+    font-size: 24rem;
     font-weight: 400;
 }
 
 
 .btn-click.research-dircetion {
-    width: 130px;
-    height: 50px;
+    width: 130rem;
+    height: 50rem;
     background-color: #000;
-    border: 1px solid #000;
-    border-radius: 2px;
+    border: 1rem solid #000;
+    border-radius: 2rem;
 }
 
 .btn-click.research-dircetion .btn-text {
-    font-size: 18px;
+    font-size: 18rem;
 }
 
 .section1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 118px 0 151px;
+    margin: 118rem 0 151rem;
 }
 
 .section1-item {
     width: 33%;
-    border-left: 1px solid #D9D9D9;
-    padding: 24px 0 30px;
+    border-left: 1rem solid #D9D9D9;
+    padding: 24rem 0 30rem;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -72,25 +72,25 @@
 }
 
 .section1-img {
-    height: 207px;
+    height: 207rem;
 }
 
 .section1-item::before {
     content: "";
     display: block;
-    height: 130px;
-    width: 7px;
+    height: 130rem;
+    width: 7rem;
     background-color: #FF0000;
     position: absolute;
     top: 0;
     bottom: 0;
-    left: -3.5px;
+    left: -3.5rem;
     margin: auto;
 }
 
 .section1-item h4 {
-    font-size: 36px;
-    margin: 33px 0 20px;
+    font-size: 36rem;
+    margin: 33rem 0 20rem;
 }
 
 .section1-item:nth-of-type(1)::before {
@@ -112,8 +112,8 @@
     font-size: 0.83vw;
     color: #fff;
     background-color: #000;
-    border-radius: 44px;
-    margin: 0 10px;
+    border-radius: 44rem;
+    margin: 0 10rem;
 }
 
 .section2 .content {
@@ -149,7 +149,7 @@
     position: relative;
     line-height: 1.36;
     margin-bottom: 1.8vw;
-    margin-top: 10px;
+    margin-top: 10rem;
     color: #000;
 }
 
@@ -165,10 +165,10 @@
 }
 
 .section2-img {
-    width: 100px;
-    height: 100px;
+    width: 100rem;
+    height: 100rem;
     background-color: #FF0000;
-    margin-left: 50px;
+    margin-left: 50rem;
 }
 
 
@@ -181,7 +181,7 @@
 .section3::before {
     content: '';
     display: block;
-    height: 1px;
+    height: 1rem;
     width: 50%;
     top: 50%;
     left: 25%;
@@ -222,13 +222,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 8px 0
+    margin: 8rem 0
 }
 
 .section3 .circle .st p {
     font-size: 0.8vw;
     text-transform: uppercase;
-    margin-left: 10px;
+    margin-left: 10rem;
     font-family: "PingFang SC", "Calibri", "opensans", "GothicArial", "Arial", "Microsoft YaHei", "San Francisco", 'Hiragino Sans GB', "Helvetica Neue"
 }
 
@@ -258,12 +258,12 @@
 .section4 .cases a {
     width: 49%;
     margin-bottom: 5.2vw;
-    perspective: 25px;
+    perspective: 25rem;
 }
 
 /* .section4 .cases a .pic:hover {
     will-change: transform;
-    transform: translate (0px, 0рх, 0рх) scale3d(1, 1, 1) rotateX(-4.0658deg) rotateY(4.955deg) rotateZ(0deg) skew(0deg, 0deg);
+    transform: translate (0rem, 0рх, 0рх) scale3d(1, 1, 1) rotateX(-4.0658deg) rotateY(4.955deg) rotateZ(0deg) skew(0deg, 0deg);
     transform-style: preserve-3d;
     background-color: rgb (23, 23, 23);
 } */
@@ -281,21 +281,21 @@
 }
 
 .section4 .cases a .text {
-    margin: 30px 0 0;
+    margin: 30rem 0 0;
 }
 
 .section4 .cases a .text .p1 {
     color: #000;
     font-size: 1.97vw;
     font-weight: 700;
-    margin: 30px 0 20px;
+    margin: 30rem 0 20rem;
 }
 
 .section4 .cases a .text .des {
     color: #000;
     font-size: .9vw;
     font-weight: 400;
-    margin: 20px 0;
+    margin: 20rem 0;
     line-height: 1.6;
     word-break: break-all;
     text-overflow: ellipsis;
@@ -311,17 +311,17 @@
 
 .section4 .cases a .text .tag p {
     display: inline-block;
-    padding: 4px 34px;
+    padding: 4rem 34rem;
     background: #000;
     color: #fff;
-    margin: 0 10px 0 0;
-    line-height: 20px;
+    margin: 0 10rem 0 0;
+    line-height: 20rem;
     font-weight: 400;
 }
 
 .section4 .more a {
     width: 20vw;
-    border: 1px solid #000;
+    border: 1rem solid #000;
     background: transparent;
     display: block;
     text-align: center;
@@ -347,14 +347,14 @@
 .black_section .st {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 20rem;
 }
 
 .black_section .st p {
     color: #FFF;
     font-size: 0.9vw;
     /* text-transform: uppercase; */
-    /* margin-left: 9px; */
+    /* margin-left: 9rem; */
 }
 
 body .section4:after {
@@ -441,7 +441,7 @@ body .main-wrapper {
 .is--white.manifesto_heading.split-lines .manifesto_heading_title {
     font-size: 3vw;
     font-weight: 700;
-    margin-bottom: 30px;
+    margin-bottom: 30rem;
 }
 
 .is--white.manifesto_heading.split-lines .en {
@@ -450,7 +450,7 @@ body .main-wrapper {
 }
 
 .is--white.manifesto_heading.split-lines .frist-en {
-    margin-top: 20px;
+    margin-top: 20rem;
 }
 
 .container.is-manifesto {
@@ -520,26 +520,26 @@ body .main-wrapper {
 }
 
 .section5 .allItems .item .icon {
-    height: 130px;
+    height: 130rem;
     display: flex
 }
 
 .section5 .allItems .item .dt {
     font-size: 2.1vw;
     font-weight: 600;
-    margin-top: 30px
+    margin-top: 30rem
 }
 
 .section5 .allItems .item .dt2 {
     font-weight: lighter;
     font-size: 1.26vw;
-    margin: 10px 0 20px 0;
-    letter-spacing: 1px
+    margin: 10rem 0 20rem 0;
+    letter-spacing: 1rem
 }
 
 .section5 .allItems .item .dt2 span {
     font-weight: bold;
-    margin: 0 2px
+    margin: 0 2rem
 }
 
 .section5 .allItems .item .des {
