--- a/views/css/service.css
+++ b/views/css/service.css
@@ -1,7 +1,3 @@
-html {
-    font-size: 0.052vw;
-}
-
 .services_main {
     /* padding: 0vh 5vw; */
 }
@@ -65,6 +61,10 @@ html {
     transition: all 1s
 }
 
+.hover_line:hover {
+    color: #fff;
+}
+
 .hover_line:hover .hover_img {
     opacity: 1;
 }
@@ -120,4 +120,5 @@ html {
     background: #FF2222;
     text-align: center;
     line-height: 36rem;
+    color: #fff;
 }
