--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/css/animate.min.css">
 <link rel='stylesheet' href='/css/global.css' />
+<link rel='stylesheet' href='/css/global.media.css' />
 <svg display="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
     <symbol id="logoIcon" fill="none">
         <path
