--- a/views/service.ejs
+++ b/views/service.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/service.css" />
+    <link rel="stylesheet" href="css/service.media.css" />
   </head>
 
   <body>
