--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -103,14 +103,14 @@
             </div>
 
         </nav>
-        <nav class="mobile-nav">
+        <!-- <nav class="mobile-nav">
             <div class="container is-mobile-nav"><a href="/careers" class="big_link">Careers</a><a href="/our-story"
                     class="big_link">Our story</a><a href="https://satoshilabs.webflow.io/#our-companies"
                     class="big_link">Our
                     companies</a><a href="/manifesto" class="big_link">Manifesto</a><a href="/newsroom"
                     class="big_link">Newsroom</a><a href="/reach-out" class="big_link">Reach out</a>
             </div>
-        </nav>
+        </nav> -->
         <div data-w-id="7116ace3-d94f-675b-8535-f2c9c1e61c6d" class="page-transition">
             <div class="page-transition_background"></div>
         </div>
