--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -9,49 +9,249 @@
   <link rel="stylesheet" href="css/contact.media.css" />
 </head>
 
-<body page="home">
+<body>
   <%- include('components/header'); -%>
-    <main>
-      <div class="present">
-        <div class="present_background"></div>
-        <p class="present_principal">
-          区别于传统互联网建站公司，我们站在品牌的高度，以策略的思维，注重细节，创造卓越视觉享受与体验的高端网站建设
-        </p>
-        <div class="present_img">
-          <img src="/uploads/contact/c562879e23c5953602d3742811637924.png" alt="" />
-          <div class="img_grayscale"></div>
+  <main>
+    <div class="liaison_head">
+      <div class="liaison_head_left wow text-down" style="animation-delay: 2.4s;">
+        <div class="liaison_head_left_p1">联系我们</div>
+        <p class="liaison_head_left_p2">您可以直接留言我们需求或者电话/微信联系我们</p>
+      </div>
+      <div class="liaison_head_right wow text-down" style="animation-delay: 2.6s;">
+        <p class="liaison_head_right_p1">商务合作</p>
+        <p class="liaison_head_right_p2">136 6704 3458</p>
+        <div class="liaison_head_right_two_dimensional_barcode">
+          <img src="" alt="二维码">
+        </div>
+      </div>
+
+    </div>
+    <div class="button_group wow text-down" style="animation-delay: 2.1s;">
+      <div class="button_group_title">
+        服务需求
+      </div>
+      <div class="button_list">
+        <div class="checkbox">
+          <input type="checkbox" name="needs" value="品牌生态视觉策略">
+          &nbsp;&nbsp;品牌生态视觉策略
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="needs" value="网站设计开发">
+          &nbsp;&nbsp;网站设计开发
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="needs" value="网站设计开发">
+          &nbsp;&nbsp;品牌视觉识别
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="needs" value="软件系统开发">
+          &nbsp;&nbsp;软件系统开发
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="needs" value="Global全球数字化营销">
+          &nbsp;&nbsp;Global全球数字化营销
+        </div>
+      </div>
+
+    </div>
+    <div class="button_group wow text-down" style="animation-delay: 2.1s;">
+      <div class="button_group_title">
+        项目群体
+      </div>
+      <div class="button_list">
+        <div class="checkbox">
+          <input type="checkbox" name="object">
+          &nbsp;&nbsp;ToB
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="object">
+          &nbsp;&nbsp;ToC
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="object">
+          &nbsp;&nbsp;国内
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="object">
+          &nbsp;&nbsp;国外
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="object">
+          &nbsp;&nbsp;全部
+        </div>
+      </div>
+
+    </div>
+    <div class="button_group wow text-down" style="animation-delay: 2.1s;">
+      <div class="button_group_title">
+        项目方向
+      </div>
+      <div class="button_list">
+        <div class="checkbox">
+          <input type="checkbox" name="direaction">
+          &nbsp;&nbsp;外贸
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="direaction">
+          &nbsp;&nbsp;营销
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="direaction">
+          &nbsp;&nbsp;产品展示为主
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="direaction">
+          &nbsp;&nbsp;品牌展示为主
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="direaction">
+          &nbsp;&nbsp;工厂/研发实力
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="direaction">
+          &nbsp;&nbsp;集团
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="direaction">
+          &nbsp;&nbsp;其他
+        </div>
+      </div>
+
+    </div>
+    <div class="button_group wow text-down">
+      <div class="button_group_title">
+        初步需求：项目的基本需求，栏目、内容规划、功能、风格等有了吗？
+      </div>
+      <div class="button_list">
+        <div class="checkbox">
+          <input type="checkbox" name="friststep">
+          &nbsp;&nbsp;有，但需要完善
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="friststep">
+          &nbsp;&nbsp;有，十分完善
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="friststep">
+          &nbsp;&nbsp;没有，但已经在整理中
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="friststep">
+          &nbsp;&nbsp;没有，需要极简慕枫规划
+        </div>
+      </div>
+
+    </div>
+    <div class="button_group wow text-down">
+      <div class="button_group_title">
+        需求产生原因
+      </div>
+      <div class="button_list">
+        <div class="checkbox">
+          <input type="checkbox" name="reason">
+          &nbsp;&nbsp;品牌升级，需要迭代
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="reason">
+          &nbsp;&nbsp;视觉不好看
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="reason">
+          &nbsp;&nbsp;功能不齐全
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="reason">
+          &nbsp;&nbsp;需求增加
+        </div>
+      </div>
+
+    </div>
+    <div class="button_group wow text-down">
+      <div class="button_group_title">
+        时间规划：计划项目完成时间
+      </div>
+      <div class="button_list">
+        <div class="checkbox">
+          <input type="checkbox" name="deadline">
+          &nbsp;&nbsp;1个月内
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="deadline">
+          &nbsp;&nbsp;1-2个月
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="deadline">
+          &nbsp;&nbsp;3-6个月
+        </div>
+      </div>
+
+    </div>
+    <div class="button_group wow text-down">
+      <div class="button_group_title">
+        项目预算：
+      </div>
+      <div class="button_list">
+        <div class="checkbox">
+          <input type="checkbox" name="budget">
+          &nbsp;&nbsp;1w以内
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="budget">
+          &nbsp;&nbsp;1w-5w
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="budget">
+          &nbsp;&nbsp;5w-8w
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="budget">
+          &nbsp;&nbsp;8w以上
+        </div>
+      </div>
+
+    </div>
+    <div>
+      <div class="button_group_title ">
+        客户资料:
+      </div>
+      <div class="customer_information">
+        <div class="input-item wow text-down">
+          <input placeholder="公司全称" type="text" name="company_name" required>
+          <span class="error">请输入公司全称</span>
+        </div>
+        <div class="input-item wow text-down">
+          <input placeholder="联系人" type="text" name="contact" required>
+          <span class="error">请输入联系人</span>
+        </div>
+        <div class="input-item wow text-down">
+          <input placeholder="联系方式" type="text" name="iphone" required>
+          <span class="error">请输入联系方式</span>
+        </div>
+        <div class="input-item wow text-down">
+          <input placeholder="联系邮箱" type="text" name="email">
+        </div>
+        <div class="input-item wow text-down">
+          <input placeholder="官网" type="text" name="url">
         </div>
 
-        <div class="detailed_introduction">
-          <div class="detailed_introduction_quotation_mark">
-            “
-          </div>
-          Redesign是一个创造性的企业围绕“极简”核心理念，帮助企业全面策划并分析品牌展示方向聚焦品牌核心定位，从商业品牌官网设计出发结合品牌内容策划、视觉传达、数字营销打造完整的品牌视觉输出生态从而帮助企业聚焦品牌核心竞争力来获取成果
-          </p>
+        <div class="input-item wow text-down">
+          <input placeholder="留言" type="text" name="message">
         </div>
-        <div class="companion">
-          <div class="companion_title">合作伙伴</div>
-          <div class="companion_list">
-            <img class="companion_item" src="/uploads/contact/image 16.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 17.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 18.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 19.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 20.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 21.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 22.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 23.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 24.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 25.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 26.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 27.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 28.png" alt="">
-            <img class="companion_item" src="/uploads/contact/image 29.png" alt="">
-          </div>
-          <div class="companion_line"></div>
-        </div>
-    </main>
+        <button type="submit wow text-down" class="submit last_button btn-click magnetic" data-strength="25"
+          data-strength-text="15">
+          <div class="btn-fill"></div>
+          <span class="btn-text">
+            <span class="btn-text-inner">提交</span>
+          </span>
+        </button>
+      </div>
+    </div>
+  </main>
 
-    <%- include('components/footer'); -%>
+
+  <%- include('components/footer'); -%>
 </body>
+<script src="js/contact.js" defer></script>
+
 
 </html>
