--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -66,13 +66,13 @@
                         <span class="btn-text-inner">Service 服务</span>
                     </span>
                 </a>
-                <a href="/about.html" class="btn-click magnetic p-button top_nav-link " data-strength="20"
+                <a href="/contact" class="btn-click magnetic p-button top_nav-link " data-strength="20"
                     data-strength-text="10" style="transform: rotate(0.001deg);">
                     <span class="btn-text">
                         <span class="btn-text-inner">Contact 联系</span>
                     </span>
                 </a>
-                <a href="/science.html" class="btn-click magnetic p-button top_nav-link " data-strength="20"
+                <a href="/about" class="btn-click magnetic p-button top_nav-link " data-strength="20"
                     data-strength-text="10" style="transform: rotate(0.001deg);">
                     <span class="btn-text">
                         <span class="btn-text-inner">About 关于</span>
@@ -81,14 +81,14 @@
 
 
             </div>
-            <a href="/contact.html" class="btn-click get-scheme magnetic home-btn" style="display: none;"
-                data-strength="25" data-strength-text="15">
+            <a href="/contact" class="btn-click get-scheme magnetic home-btn" style="display: none;" data-strength="25"
+                data-strength-text="15">
                 <div class="btn-fill"></div>
                 <span class="btn-text">
-                    <span class="btn-text-inner change">获取方案</span>
+                    <span class="btn-text-inner change3">获取方案</span>
                 </span>
             </a>
-            <a href="/contact.html" class="btn-click get-scheme magnetic"
+            <a href="/contact" class="btn-click get-scheme magnetic"
                 style=" background-color: #000;border: 1px solid #000; " data-strength="25" data-strength-text="15">
                 <div class="btn-fill"></div>
                 <span class="btn-text">
@@ -103,18 +103,46 @@
             </div>
 
         </nav>
-        <!-- <nav class="mobile-nav">
-            <div class="container is-mobile-nav"><a href="/careers" class="big_link">Careers</a><a href="/our-story"
-                    class="big_link">Our story</a><a href="https://satoshilabs.webflow.io/#our-companies"
-                    class="big_link">Our
-                    companies</a><a href="/manifesto" class="big_link">Manifesto</a><a href="/newsroom"
-                    class="big_link">Newsroom</a><a href="/reach-out" class="big_link">Reach out</a>
+        <div class="phone_menu">
+            <div class="fixed-nav-rounded-div">
+                <div class="rounded-div-wrap">
+                    <div class="rounded-div"></div>
+                </div>
             </div>
-        </nav> -->
-        <div data-w-id="7116ace3-d94f-675b-8535-f2c9c1e61c6d" class="page-transition">
-            <div class="page-transition_background"></div>
+            <div class="close">
+                <svg t="1720185064707" class="icon" viewBox="0 0 1024 1024" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg" p-id="1952">
+                    <path d="M212.992 526.336 212.992 526.336 212.992 526.336 215.04 526.336 212.992 526.336Z"
+                        p-id="1953" fill="currentColor"></path>
+                    <path
+                        d="M817.152 202.752 817.152 202.752C737.28 122.88 628.736 75.776 509.952 75.776c-118.784 0-229.376 49.152-307.2 126.976l0 0c-77.824 77.824-126.976 186.368-126.976 307.2 0 118.784 49.152 229.376 126.976 307.2 77.824 79.872 188.416 126.976 307.2 126.976 120.832 0 229.376-49.152 307.2-126.976 79.872-77.824 126.976-186.368 126.976-307.2C946.176 389.12 897.024 280.576 817.152 202.752zM770.048 770.048c-65.536 65.536-157.696 108.544-260.096 108.544-102.4 0-194.56-40.96-260.096-108.544C184.32 704.512 141.312 612.352 141.312 509.952s40.96-194.56 108.544-260.096C317.44 184.32 409.6 141.312 509.952 141.312c100.352 0 192.512 40.96 258.048 106.496l2.048 2.048c65.536 65.536 108.544 157.696 108.544 260.096S837.632 704.512 770.048 770.048z"
+                        p-id="1954" fill="currentColor"></path>
+                    <path
+                        d="M636.928 307.2 636.928 307.2c20.48-20.48 55.296-20.48 75.776 0 20.48 20.48 20.48 55.296 0 73.728l-124.928 126.976 124.928 126.976c20.48 20.48 20.48 55.296 0 75.776-20.48 22.528-55.296 22.528-75.776 0l-124.928-124.928-126.976 124.928c-20.48 22.528-55.296 22.528-75.776 0-22.528-20.48-22.528-53.248 0-75.776l126.976-126.976-126.976-126.976c-22.528-20.48-22.528-53.248 0-73.728 20.48-20.48 55.296-20.48 75.776 0l126.976 126.976L636.928 307.2 636.928 307.2z"
+                        p-id="1955" fill="currentColor"></path>
+                </svg>
+                <!-- <img src="/images/close.png" alt=""> -->
+            </div>
+            <p class="p1">navigation</p>
+            <div class="fixed-inner">
+                <div class="links">
+                    <a class="active " href="/">首页</a>
+                    <a class="" href="/cases">Case 案例</a>
+                    <a class="" href="/service">Service 服务</a>
+                    <a class="" href="/contact">Contact 联系</a>
+                    <a class="" href="/science.html">About 关于</a>
+                    <!-- <a href="/en">CN-EN</a> -->
+                </div>
+            </div>
+            <div class="flinks">
+                <p>Tel：136 6704 3458</p>
+                <p>email：Red@redesign86.com</p>
+
+            </div>
+            <div data-w-id="7116ace3-d94f-675b-8535-f2c9c1e61c6d" class="page-transition">
+                <div class="page-transition_background"></div>
+            </div>
         </div>
-    </div>
 </header>
 <div class="innerload">
     <div class="innerload-bg"></div>
