--- a/views/css/contact.media.css
+++ b/views/css/contact.media.css
@@ -1,105 +1,125 @@
 @media (max-width:1024px) {
-    .present {
-        display: flex;
-        flex-direction: column;
+
+    main {
+        padding-bottom: 60px;
+    }
+
+    .liaison_head {
+        display: block;
+        justify-content: space-between;
+        padding: 0 5%
+    }
+
+    .liaison_head_left {
+        /* position: relative; */
+    }
+
+    .liaison_head_left .liaison_head_left_p1 {
+        font-size: 50px;
+        font-weight: 400;
+        line-height: 1.2;
+        position: relative;
+    }
+
+    .liaison_head_left .liaison_head_left_p1::before {}
+
+    .liaison_head_left .liaison_head_left_p2 {
+        margin-top: 20rem;
+        font-size: 18rem;
+        font-weight: 400;
+        line-height: 25.2rem;
+        text-align: left;
+    }
+
+    .liaison_head_right {
+        margin-top: 30rem;
+        flex-direction: row;
+        gap: 10px;
         align-items: center;
-        position: relative;
-
     }
 
-    .present_background {
-        height: 953rem;
+    .liaison_head_right_p1 {
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 24.7rem;
+    }
+
+    .liaison_head_right_p2 {
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 38.42rem;
+    }
+
+    .liaison_head_right_two_dimensional_barcode {
+        width: 80px;
+        height: 80px;
+        background-color: rgba(0, 0, 0, 0.2);
+    }
+
+    .liaison_head_right_two_dimensional_barcode img {
         width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        background-color: #000;
     }
 
-    .present_principal {
-        font-size: 48rem;
-        font-weight: 400;
-        line-height: 72rem;
-        text-align: center;
-        margin-top: 90rem;
-        padding: 0 50rem;
-        color: #fff;
-        width: auto;
+    input[type="checkbox"] {
+        width: 20px;
+        height: 20px;
     }
 
-    .present_img {
-        width: 100%;
-        /* height: 792rem; */
-        border-radius: 10rem 0rem 0rem 0rem;
-        margin-top: 80rem;
-        position: relative;
-        filter: grayscale(1);
+    .button_group {}
+
+    .button_group_title {
+        font-size: 16px;
+        line-height: 1.2;
+        padding: 20px 0 20px 5%;
     }
 
-    /* .img_grayscale {
-        background-color: #000;
-        position: absolute;
-        opacity: 0.2;
-        height: 100%;
-        width: 100%;
-        top: 0;
-    } */
-
-    .detailed_introduction {
-        padding: 100rem 138rem;
-        width: auto;
-        font-size: 38rem;
-        line-height: 53.2rem;
-        position: relative;
-        border-bottom: 1rem solid #ccc;
-
-    }
-
-    .detailed_introduction_quotation_mark {
-        position: absolute;
-        left: 50rem;
-        top: 75rem;
-        width: 72rem;
-        height: 168rem;
-        opacity: 0.1;
-        font-size: 120rem;
-        font-weight: 400;
-        line-height: 168rem;
-        text-align: justified;
-        color: #000;
-
-
-    }
-
-    .companion {
-        margin-top: 140rem;
-    }
-
-    .companion_title {
-        font-size: 48rem;
-        font-weight: 400;
-        line-height: 72rem;
-        text-align: center;
-        margin-bottom: 80rem;
-
-    }
-
-    .companion_list {
-        padding: 0 100rem;
+    .button_list {
+        padding: 20px 0 20px 5%;
+        background: #D9D9D966;
         display: flex;
         flex-wrap: wrap;
-        column-gap: 50rem;
+        gap: 20rem 50rem;
+        min-height: 110rem;
+        font-size: 13px;
     }
 
-    .companion_item {
-        width: 191rem;
-        height: 117rem;
+    .checkbox {
+        display: flex;
+        align-items: center;
+        width: auto;
+
     }
 
-    .companion_line {
-        margin: 140rem auto 0;
-        width: 1360rem;
-        border: 1rem solid #ccc;
+    .customer_information {
+        padding: 0 20px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 10rem 0;
+    }
+
+    .customer_information .input-item {
+        width: 100%;
+    }
+
+    .customer_information .input-item input {
+        height: 40px;
+        font-size: 14px;
+        padding: 10px;
+    }
+
+
+
+    .customer_information .submit {
+        width: 100%;
+        height: 40px;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 54rem;
+        text-align: center;
+        color: #fff;
+        background-color: #000;
+
     }
 }
