--- a/views/service.ejs
+++ b/views/service.ejs
@@ -1,138 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/service.css" />
-    <link rel="stylesheet" href="css/service.media.css" />
-  </head>
 
-  <body>
-    <%- include('components/header'); -%>
-    <main>
-      <div class="services_main">
-        <div class="site_page">
-          <div class="left_text">
-            <h2>
-              量身订制<br />
-              适合您品牌的网站
-            </h2>
-            <span>
-              通过美学设计独特的视觉元素和吸引人的外观，使品牌在众多竞争者中脱颖而出。一个让客户印象深刻和独特的网站可以快速与竞争对手区分开来。
-            </span>
-          </div>
-          <!-- <img
-            class="right_img"
-            src="/uploads/service/6136222cbf7105a695e99c1dff66b8c4.png"
-            alt=""
-          /> -->
-          <div class="AboutHeroBx-preserve">
-            <div class="AboutHeroBx-item first" style="opacity: 1">
-              <div
-                class="AboutHeroBx-card"
-                style="transform: translate3d(0px, 5.2147%, 0px); height: 50vh"
-              >
-                <img
-                  class="AboutHeroBx-img"
-                  src="/uploads/service/6136222cbf7105a695e99c1dff66b8c4.png"
-                  alt=""
-                  style="
-                    transform: translate3d(0px, 0px, 0px) rotate(31.0612deg)
-                      rotateY(-34.1436deg) rotateX(16.4205deg);
-                  "
-                />
-              </div>
-            </div>
-            <div class="AboutHeroBx-item center" style="opacity: 1">
-              <div class="AboutHeroBx-card" style="height: 50vh">
-                <img
-                  class="AboutHeroBx-img"
-                  src="/uploads/service/6136222cbf7105a695e99c1dff66b8c4.png"
-                  alt=""
-                  style="
-                    transform: translate3d(0px, 0px, 0px) rotate(31.0612deg)
-                      rotateY(-34.1436deg) rotateX(16.4205deg);
-                  "
-                />
-              </div>
-            </div>
-            <div class="AboutHeroBx-item last" style="">
-              <div
-                class="AboutHeroBx-card"
-                style="transform: translate3d(0px, -5.2147%, 0px); height: 50vh"
-              >
-                <img
-                  class="AboutHeroBx-img"
-                  src="/uploads/service/6136222cbf7105a695e99c1dff66b8c4.png"
-                  alt=""
-                  style="
-                    transform: translate3d(0px, 0px, 0px) rotate(31.0612deg)
-                      rotateY(-34.1436deg) rotateX(16.4205deg);
-                  "
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="hover_line hover_line_1">
-          <div class="left_text">
-            <div class="left_text_block">
-              <h3>品牌生态视觉策略</h3>
-              <span>透过深入了解客户需求和目标，帮助客户的品牌提升价值</span>
-              <div class="button">
-                <span>品牌核心</span>
-                <span>独特价值</span>
-              </div>
-            </div>
-            <div class="left_text_block">
-              <h4>科学方法论</h4>
-              <span
-                >进化论 —— 回归品牌本质价值<br />
-                独特价值 —— 挖掘并赋予品牌完整体系的独特价值</span
-              >
-            </div>
-          </div>
-          <div class="hover_img">
-            <img
-              width="100%"
-              src="/uploads/service/bcc89fceb4415f6e3a2fb65080092319.png"
-              alt=""
-            />
-          </div>
-        </div>
-        <div class="hover_line hover_line_2">
-          <div class="left_text">
-            <div class="left_text_block">
-              <h3>网站设计、软件系统开发</h3>
-              <span>透过深入了解客户需求和目标，帮助客户的品牌提升价值</span>
-              <div class="button">
-                <span>黄金15秒</span>
-                <span>独特价值</span>
-                <span>巅峰体验</span>
-              </div>
-            </div>
-            <div class="left_text_block">
-              <h4>科学方法论</h4>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="css/service.css" />
+  <!-- <link rel="stylesheet" href="css/service.media.css" /> -->
+</head>
+
+<body>
+  <%- include('components/header'); -%>
+  <main>
+    <div class="services_main">
+      <div class="site_page">
+        <div class=" AboutRedesign">
+          <div class="page-container">
+
+            <div class="left_text wow text-down" style="animation-delay: 2.4s;">
+              <h2>
+                <p class="left_text_first">量身订制</p><br />
+                适合您品牌的网站
+              </h2>
               <span>
-                黄金15秒 —— 打造用户落地最短路径<br />
-                极简逻辑 —— 易拓展、易迭代、易操作<br />
-                巅峰体验 —— 深刻用户品牌高光记忆<br />
+                通过美学设计独特的视觉元素和吸引人的外观，使品牌在众多竞争者中脱颖而出。一个让客户印象深刻和独特的网站可以快速与竞争对手区分开来。
               </span>
             </div>
+            <div class=" AboutRedesignBx wow text-down" style="animation-delay: 2.6s;">
+              <div class="AboutRedesignBx-preserve">
+                <div class="AboutRedesignBx-item first">
+                  <div class="AboutRedesignBx-card">
+                    <img class="AboutRedesignBx-img" src="/uploads/service/img3.png" alt="">
+                  </div>
+                </div>
+                <div class="AboutRedesignBx-item center">
+                  <div class="AboutRedesignBx-card">
+                    <img class="AboutRedesignBx-img" src="/uploads/service/img2.png" alt="">
+                  </div>
+
+                </div>
+                <div class="AboutRedesignBx-item card">
+                  <div class="AboutRedesignBx-card">
+                    <img class="AboutRedesignBx-img" src="/uploads/service/card.png" alt="">
+                  </div>
+                  <div class="CardText-text item-2" style="opacity: 0;">
+                    <span class="CardText-num"></span>
+                    <span class="CardText-title">极简输出</span>
+                  </div>
+                </div>
+                <div class="AboutRedesignBx-item last">
+                  <div class="AboutRedesignBx-card">
+                    <img class="AboutRedesignBx-img" src="/uploads/service/img1.png" alt="">
+                  </div>
+                </div>
+
+              </div>
+            </div>
           </div>
-          <div class="hover_img">
-            <img
-              width="100%"
-              src="/uploads/service/5b9578f3d1cea1403a9faaf0ce4e9bbe.png"
-              alt=""
-            />
-          </div>
+
+
         </div>
       </div>
-    </main>
 
-    <%- include('components/footer'); -%>
-    <script src="/js/service.js"></script>
-  </body>
+      <div class="hover_line hover_line_1 wow text-down">
+        <div class="left_text">
+          <div class="left_text_block">
+            <h3>品牌生态视觉策略</h3>
+            <span>透过深入了解客户需求和目标，帮助客户的品牌提升价值</span>
+            <div class="button">
+              <span>品牌核心</span>
+              <span>独特价值</span>
+            </div>
+          </div>
+          <div class="left_text_block">
+            <h4>科学方法论</h4>
+            <span>进化论 —— 回归品牌本质价值<br />
+              独特价值 —— 挖掘并赋予品牌完整体系的独特价值</span>
+          </div>
+        </div>
+        <div class="hover_img">
+          <img width="100%" src="/uploads/service/banner1.jpg" alt="科学方法论" />
+        </div>
+      </div>
+      <div class="hover_line hover_line_2 wow text-down">
+        <div class="left_text">
+          <div class="left_text_block">
+            <h3>网站设计、软件系统开发</h3>
+            <span>透过深入了解客户需求和目标，帮助客户的品牌提升价值</span>
+            <div class="button">
+              <span>黄金15秒</span>
+              <span>独特价值</span>
+              <span>巅峰体验</span>
+            </div>
+          </div>
+          <div class="left_text_block">
+            <h4>科学方法论</h4>
+            <span>
+              黄金15秒 —— 打造用户落地最短路径<br />
+              极简逻辑 —— 易拓展、易迭代、易操作<br />
+              巅峰体验 —— 深刻用户品牌高光记忆<br />
+            </span>
+          </div>
+        </div>
+        <div class="hover_img">
+          <img width="100%" src="/uploads/service/banner2.jpg" alt="科学方法论" />
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <%- include('components/footer'); -%>
+
+  <script src="/js/service.js" defer></script>
+
+  <script>
+    if (document.documentElement.clientWidth < 1024) {
+      setTimeout(function () {
+        $('.CardText-text').addClass('on')
+      }, 10)
+      window.addEventListener('scroll', function () {
+        var scrollTop = document.documentElement.scrollTop
+        if (scrollTop > 0) {
+          $('.CardText-text').removeClass('on')
+        } else {
+          $('.CardText-text').addClass('on')
+        }
+      })
+    }
+  </script>
+</body>
+
 </html>
